--- a/src/style.css
+++ b/src/style.css
@@ -5,9 +5,12 @@
   padding:0;
   font-size:large;
   max-width: 100%;
+  font-family: 'Baloo 2', cursive;
+  font-size: 22px;
 }
 body{
   background: linear-gradient(180deg, #F67280 0%, #8CA5CA 32.81%);
+  
   width: 100%;
   height: 100%;
   margin: 0;
@@ -67,7 +70,7 @@ body{
 .contactimg{
   height:100%;
   width:50%;
-  margin-left: 10%;
+  margin-left: 40%;
 }
 .tools{
   letter-spacing: 0.2em;
@@ -75,7 +78,6 @@ body{
 .white{
   background:white;
   margin:0;
-  box-sizing: unset;
 }
 .box{
   margin:1%;
@@ -98,13 +100,51 @@ margin-left: 40%;
 
 /*---Media Queries --*/
 @media (max-width: 992px) {
-
+  *{
+    font-size: 20px;
+    
   }
-@media (max-width: 768px) {
   
+  .projectSection{
+    padding-left: 20%;
+  }
+  .cv{
+    margin-left: 30%;
+  }
+}
+@media (max-width: 768px) {
+
 }
 @media (max-width: 576px) {
-  
+  *{
+    font-size: 15px;
+    margin:0;
+    padding:0;
+  }
+  .logoSpacing{
+    padding-bottom: 15%;
+    margin-left: 5%;
+  }
+  .projectSection{
+    padding-left: 15%;
+  }
+  .cv{
+    margin-left: 30%;
+  }
+.sections .white{
+  padding:0;
+}
+}
+@media (max-width: 368px){
+  *{
+    font-size: 15px;
+    margin:0;
+    padding:0;
+  }
+  .sections .white{
+    padding:0;
+  }
+
 }
 
 
