--- a/src/style.css
+++ b/src/style.css
@@ -9,8 +9,7 @@
   font-size: 22px;
 }
 body{
-  background: linear-gradient(180deg, #F67280 0%, #8CA5CA 32.81%);
-  
+  background: linear-gradient(180deg, #F67280 0%, #8CA5CA 32.81%);  
   width: 100%;
   height: 100%;
   margin: 0;
@@ -22,7 +21,6 @@ body{
 .main{
   width: inherit;
   height: inherit;
-
 }
 .logo{
   width: 8%;
@@ -56,12 +54,14 @@ body{
   color: white;
   font-size: 80px;
 }
-.blueTitle{
+.introText{
+  color: rgb(245, 244, 244);
+}
+.pinkTitle{
   color: #BC4854;
 }
 .myName{
-  margin-bottom: 8%;
-  margin-top:5%;
+  margin-bottom: 6%;
 }
 .whiteTitle{
   color: rgb(245, 244, 244);
@@ -79,10 +79,6 @@ body{
   background:white;
   margin:0;
 }
-.box{
-  margin:1%;
-  padding:3%;
-}
 .projectImg{
   width:80%;
   height:50%;
@@ -90,29 +86,47 @@ body{
   }
 .sections{
   padding:5%;
+  padding-left: 10%;
 }
+.projects{
+  padding-left:2%;
+}
+.contactDiv{
+  padding-left: 4%;
+} 
 .middleBtn{
 margin-left: 40%;
 }
-
-
+.skillsDiv{
+  margin-left: 2%;
+}
+.contact{
+  margin-left: 40%;
+}
 
 
 /*---Media Queries --*/
 @media (max-width: 992px) {
   *{
-    font-size: 20px;
-    
-  }
-  
+    font-size: 20px;    
+  }  
   .projectSection{
     padding-left: 20%;
   }
-  .cv{
-    margin-left: 30%;
+  .text{
+    font-size: 40px;
   }
 }
 @media (max-width: 768px) {
+  *{
+    font-size: 15px;    
+  } 
+.myName{
+  margin-top: 0%;
+}
+.projectTitle{
+  padding-left: 20%;
+}
 
 }
 @media (max-width: 576px) {
@@ -121,6 +135,21 @@ margin-left: 40%;
     margin:0;
     padding:0;
   }
+  .cv{
+    margin-left: 30%;
+  }
+  .skillsDiv{
+    margin-left: 10%;
+  }
+  .contact{
+    margin-left: 35%;
+  }
+  .myName{
+    margin-top: 6%;
+  }
+  .sections{
+    padding: 5% 0 5 0;
+  }
   .logoSpacing{
     padding-bottom: 15%;
     margin-left: 5%;
@@ -128,10 +157,7 @@ margin-left: 40%;
   .projectSection{
     padding-left: 15%;
   }
-  .cv{
-    margin-left: 30%;
-  }
-.sections .white{
+  .sections .white{
   padding:0;
 }
 }
@@ -144,7 +170,12 @@ margin-left: 40%;
   .sections .white{
     padding:0;
   }
-
+  .contact{
+    padding-left: 0;
+  }
+  .cv{
+    margin-left: 18%;
+  }
 }
 
 
