--- a/src/style.css
+++ b/src/style.css
@@ -29,6 +29,10 @@ body{
   width: 8%;
   height: 8%;
 }
+.icons{
+  width:50px;
+  padding-right: 20%;
+}
 .profileImg{
   max-width: 100%;
   height: auto;
